fix height of list-con on mobile view

--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,8 @@
     width: 100%;
   }
 }
+@media only screen and (max-width: 450px) {
+  .list-con {
+    height: 50vh;
+  }
+}
